infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: auth-repl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: caique2203/auth
---

apiVersion: v1
kind: Service
metadata: 
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      targetPort: 3000
